# arcana

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/budget/: index.html
api/chat/: index.html
api/contracts/: index.html
api/runtime/: index.html
api/sdk/: index.html
api/tools/: index.html
architecture/: index.html
changelog/: index.html
constitution/: index.html
docs/: KNOWLEDGE.md  architecture.md  constitution.md  graph-engine-todo.md  index.md
docs/api/: budget.md  chat.md  contracts.md  index.md  runtime.md  sdk.md  tools.md
docs/examples/: index.md
docs/guide/: api.md  cognitive-primitives.md  configuration.md  context-explainability.md  multi-agent.md  providers.md  quickstart.md  stability.md  trace.md
docs/legacy/: LEARNING_ROADMAP.md  RUNTIME_KNOWLEDGE.md  TUTORIAL.md  WEEK3-4_RUNTIME_LEARNING.md  tutorial_part1.md  tutorial_part2.md  tutorial_part3.md  tutorial_part4.md  tutorial_part5.md
docs/specs/: rag_spec.md  state_spec.md  tool_spec.md  trace_spec.md
examples/: 01_hello.py  02_with_tools.py  03_adaptive_policy.py  04_intent_router.py  05_budget_control.py  06_conversation_agent.py  07_full_demo.py  08_fastapi_integration.py  09_multi_agent.py  10_tool_with_runtime.py  11_advanced_memory.py  12_graph_orchestration.py  13_interactive_chat.py  14_ask_user.py  15_code_review_assistant.py  16_research_assistant.py  17_context_benchmark.py  18_provider_switching.py  README.md  _legacy_demo_graph_basic.py  _legacy_demo_runtime.py  _legacy_demo_trace.py  agent.yaml  demo_conversation.py  demo_deep_test.py  demo_graph_basic.py  demo_graph_react.py  demo_runtime.py  demo_trace.py  demo_v2.py
examples/sample_code/: calculator.py
scripts/: release.sh  smoke.sh
search/: search_index.json
specs/: arcana-agent-architecture-evolution-plan.html  cognitive-primitives-roadmap.md  constitution-amendment-1-cognitive-primitives.md  constitution-amendment-2-collaboration-means.md  constitution-amendment-3-multi-agent-os.md  constitution-amendment-4-cognitive-passive-surfacing.md  constitution-amendment-5-agent-protocols-and-safety.md  constitution-amendment-6-self-evolution-boundaries.md  kimi-code-response-roadmap.md  v0.3.0-context-release.md  v0.6.0-explainability.md  v0.7.0-cognitive-primitives.md  v0.8.0-collaborative-cognition.md  v1.0.0-removals.md  v1.0.0-stability.md  v2-evidence-chain-audit.md  v2.0.0-stability.md
tests/: __init__.py  conftest.py  test_agent_pool.py  test_ask_user.py  test_batch.py  test_channel.py  test_chat_session.py  test_checkpoint_resume.py  test_chroma_storage.py  test_cli.py  test_cli_init.py  test_cli_pool_replay.py  test_cognitive_pin.py  test_cognitive_recall.py  test_constitutional_invariants.py  test_context.py  test_context_decision_evidence.py  test_context_strategy.py  test_conversation.py  test_conversation_checkpoint.py  test_e2e.py  test_eval.py  test_event_hooks.py  test_evidence_chain.py  test_evolution_contracts.py  test_execution_backend.py  test_execution_channel.py  test_fidelity_and_stream.py  test_graph_builder.py  test_graph_checkpoint.py  test_graph_execution.py  test_graph_prebuilt.py  test_graph_streaming.py  test_ha_fixes.py  test_iteration_budget.py  test_langchain_adapter.py  test_lifecycle_hooks.py  test_llm_judge.py  test_mcp.py  test_mcp_dynamic_discovery.py  (+43 more)
(+204 files in other folders)
