[project]
name = "arcana-agent"
version = "0.1.0b13"
description = "Agent Runtime for production — LLM-native execution with tools, budget, and trace built in."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "tysama", email = "wty229037377@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["agent", "llm", "ai", "framework", "arcana"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.42"]
gemini = ["google-genai>=1.0"]
all-providers = ["anthropic>=0.42", "google-genai>=1.0"]
ui = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.11",
    "chromadb>=0.5",
    "anthropic>=0.42",
    "google-genai>=1.0",
]

[project.scripts]
arcana = "arcana.cli.main:app"

[project.urls]
Homepage = "https://github.com/tyxben/arcana"
Documentation = "https://github.com/tyxben/arcana"
Repository = "https://github.com/tyxben/arcana"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcana"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["arcana"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
